--- a/_modules/lovett/tree.html
+++ b/_modules/lovett/tree.html
@@ -52,6 +52,8 @@
 <span class="c"># TODO: make md5 id for trees missing one</span>
 <span class="n">ABSENT_ID</span> <span class="o">=</span> <span class="s">&quot;LOVETT_MISSING_ID&quot;</span>
 
+<span class="c"># TODO: need read-only attribute for trees, from indexed corpora</span>
+
 
 <span class="n">_METADATA_KEY_RX</span> <span class="o">=</span> <span class="n">re</span><span class="o">.</span><span class="n">compile</span><span class="p">(</span><span class="s">&quot;^[A-Z0-9-]+$&quot;</span><span class="p">)</span>
 
